# BoatDetector-CVFinalProject

./: .gitignore  CMakeLists.txt  HOGboats.xml  README.md  Report.docx  gitignore  ~$Report.docx  ~WRL3554.tmp
include/: Detection.hpp  FeaturesExtraction.hpp  Postprocessing.hpp  Preprocessing.hpp  Utils.hpp
src/: Detection.cpp  FeaturesExtraction.cpp  Postprocessing.cpp  Preprocessing.cpp  Utils.cpp  main.cpp
testSet/ground_truth/: 04.txt  05.txt  09.txt  12.txt  13.txt  14.txt  15.txt  19.txt
testSet/kaggle_labels_txt/: 01.txt  02.txt  03.txt  06.txt  07.txt  09.txt
testSet/venice_labels_txt/: 00.txt  08.txt  11.txt  16.txt  17.txt  20.txt
